prometheus-pushgateway/pushgateway.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pushgateway
  labels:
     app: pushgateway
spec:
   replicas: 1
   selector:
     matchLabels:
       app: pushgateway
   template:
      metadata:
         labels:
           app: pushgateway
      spec:
        containers:
         - name: pushgateway
           image: quay.io/prometheus/pushgateway:latest
           ports:
           - containerPort: 9091
           imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: pushgateway
  name: pushgateway
spec:
  selector:
    app: pushgateway
  ports:
  - name: pushgateway
    protocol: TCP
    port: 9091
    targetPort: 9091
