prometheus-pushgateway/route_pushgateway.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pushgateway
  namespace: prometheus-pushgateway
  labels:
    app: pushgateway
spec:
  to:
    kind: Service
    name: pushgateway
    weight: 100
  port:
    targetPort: pushgateway
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
